Fix consistent spacing of icons inside tags
The private tag's lock icon had different spacing depending on whether
it was shown in a charge-tree node, where additional CSS rules change
its width, and outside of it. So now the width is explicitly given.

--- a/frontend/assets/css/styles.css
+++ b/frontend/assets/css/styles.css
@@ -171,6 +171,10 @@ label div {
   line-height: 1.2em;
 }
 
+.tag i.fas {
+  width: 1.25em;
+}
+
 .tag.private {
   background-color: #e55;
   color: #fff;
